chi sqaure and annova added

--- a/lab_2/decision_tree_classification.ipynb
+++ b/lab_2/decision_tree_classification.ipynb
@@ -350,7 +350,7 @@
     "\n",
     "# Define column types\n",
     "categorical_columns = ['race', 'discharge_disposition_id', 'admission_source_id', 'diag_1', 'diag_2', 'diag_3', 'max_glu_serum', 'A1Cresult', 'insulin_treatment']\n",
-    "numerical_columns = ['gender', 'age', 'num_lab_procedures', 'num_procedures', 'num_medications', 'number_diagnoses', 'metformin', 'repaglinide', 'glimepiride', 'glipizide', 'glyburide', 'pioglitazone', 'rosiglitazone', 'insulin', 'diabetesMed', 'readmitted', 'preceding_year_visits']\n",
+    "numerical_columns = ['gender', 'age', 'num_lab_procedures', 'num_procedures', 'num_medications', 'number_diagnoses', 'metformin', 'repaglinide', 'glimepiride', 'glipizide', 'glyburide', 'pioglitazone', 'rosiglitazone', 'insulin', 'diabetesMed', 'readmitted', 'preceding_year_visits', 'time_in_hospital']\n",
     "\n",
     "target = 'time_in_hospital'  # Assuming this is your target variable\n",
     "\n",
